Add Entity to Project

--- a/HW5_6_Part2/App.config
+++ b/HW5_6_Part2/App.config
@@ -12,4 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="HW_3DB" connectionString="metadata=res://*/HW_3Model.csdl|res://*/HW_3Model.ssdl|res://*/HW_3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=HW_3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
