--- a/HW5_6_Part2/HW5_6_Part2.csproj
+++ b/HW5_6_Part2/HW5_6_Part2.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataBaseClasses\OrderTable.cs" />
     <Compile Include="HW_3Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
